--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es6",
+    "target": "es5",
     "outDir": "./dist",
     "sourceMap": false,
     "declaration": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "lib": ["DOM", "ES5", "ScriptHost", "ES2015"]
   },
   "include": [
     "src/**/*"
