--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "license": "MIT",
   "typings": "./dist",
   "scripts": {
-    "build": "tsc -p ./tsconfig.json"
+    "build": "tsc -p ./tsconfig.json && cpx lib/javascript-canvas-to-blob.min.js ./dist"
   },
   "devDependencies": {
+    "cpx": "^1.5.0",
     "tslint": "^5.8.0",
     "tslint-config-standard": "^7.0.0",
     "typescript": "^2.6.2"
